--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "classnames": "2.2.5",
     "history": "^4.7.2",
+    "leaflet-geosearch": "^2.7.0",
     "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
@@ -23,8 +24,6 @@
     "redux": "^4.0.0",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
-    "ts-loader": "^4.3.0",
-    "typescript": "^2.8.3",
     "url-join": "^4.0.0",
     "webpack-cli": "^2.1.3"
   },
@@ -42,13 +41,16 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
+    "leaflet": "^1.3.3",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "postcss-jsx": "0.25.0",
     "postcss-syntax": "0.25.0",
     "prettier": "^1.12.1",
+    "react-leaflet": "^2.0.0",
     "react-scripts": "^1.1.4",
     "source-map-explorer": "1.5.0",
+    "styled-components": "^3.3.3",
     "stylelint": "^9.1.1",
     "stylelint-config-standard": "^18.2.0"
   },
